# Val_Chatter_Client

./: Cargo.toml
src/: app.rs  main.rs
src/api/: admin.rs  auth.rs  client.rs  messages.rs  mod.rs  nodes.rs  pins.rs  threads.rs  uploads.rs  whiteboard.rs
src/models/: message.rs  mod.rs  node.rs  thread.rs  user.rs  whiteboard.rs
src/state/: auth.rs  chat.rs  mod.rs  nav.rs
src/ui/: admin_panel.rs  login.rs  main_layout.rs  mod.rs  settings.rs
src/ui/chat_panel/: chat_input.rs  image_viewer.rs  message.rs  message_list.rs  mod.rs  pinned_bar.rs  whiteboard.rs
src/ui/nav_panel/: map_selector.rs  mod.rs  node_button.rs  node_section.rs
src/ui/widgets/: avatar.rs  mod.rs  tag.rs
src/utils/: image_cache.rs  mod.rs  thread_key.rs
src/ws/: mod.rs  socket.rs
