[package]
name = "val-tactics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "val-tactics"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image", "default"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
image = { version = "0.25", features = ["png", "jpeg"] }
keyring = "2"
futures-util = "0.3"
anyhow = "1"
rfd = "0.14"

[profile.release]
opt-level = 3
